# micropython-starter

./: .gitignore  README.md  pymakr.conf  pyproject.toml
examples/rest/: main.py  server.py
examples/rest/lib/: microdot.mpy  wifi.py
src/: main.py
tests/: test_main.py
